@@ -4,6 +4,8 @@ LATEST
 - translationxml export: sort elements according to scoped name, but ignore case (same as in MS-Excel)
 - ModelDef: keep ordering of translations
 - INTERLIS2Def dialog: keep ordering of translations
+- ili export: fix missing BASKET OID AS
+- ili import: fix missing BASKET OID AS
 - ili export: fix missing version in TRANSLATION OF
 - ili export: export multilingual model element references in the language of the imported model
 - ili import: fix multilingual model element references
